maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:56: error: '=' expected but ';' found.
  int[] bagglePos
^JediEscaper:56: error: identifier expected but ']' found.
  int[] bagglePos
      ^JediEscaper:57: error: ']' expected but ';' found.
  bagglePos = new int[2]
^JediEscaper:57: error: identifier expected but integer literal found.
  bagglePos = new int[2]
                      ^JediEscaper:59: error: ']' expected but ';' found.
  bagglePos = foundBaggle()
^